--- a/translation/en/sujato/sutta/mn/mn80_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn80_translation-en-sujato.json
@@ -66,7 +66,7 @@
   "mn80:14.1": "When he said this, Vekhanasa said to the Buddha, ",
   "mn80:14.2": "“It’s incredible, Master Gotama, it’s amazing! ",
   "mn80:14.3": "How well said this was by Master Gotama! ",
-  "mn80:14.4": "‘From the senses comes sensual pleasure. From sensual pleasure comes the best kind of sensual pleasure, which is said to be the best thing there.’ ",
+  "mn80:14.4": "‘From the senses comes sensual pleasure. From sensual pleasure comes the best kind of sensual pleasure, which is said to be the best of these.’ ",
   "mn80:14.5": "Master Gotama, from the senses comes sensual pleasure. From sensual pleasure comes the best kind of sensual pleasure, which is said to be the best thing there.” ",
   "mn80:14.6": "“Kaccāna, since you have a different view, creed, and belief, then, unless you dedicate yourself to practice with the guidance of tradition, it’s hard for to understand ",
   "mn80:14.7": "the senses, sensual pleasure, and the best kind of sensual pleasure. ",
