--- a/translation/en/sujato/sutta/mn/mn80_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn80_translation-en-sujato.json
@@ -71,7 +71,7 @@
   "mn80:14.6": "“Kaccāna, since you have a different view, creed, and belief, then, unless you dedicate yourself to practice with the guidance of tradition, it’s hard for to understand ",
   "mn80:14.7": "the senses, sensual pleasure, and the pleasure that surmounts the sensual. ",
   "mn80:14.8": "There are mendicants who are perfected, who have ended the defilements, completed the spiritual journey, done what had to be done, laid down the burden, achieved their own goal, utterly ended the fetters of rebirth, and are rightly freed through enlightenment. They can understand ",
-  "mn80:14.9": "the senses, sensual pleasure, and the best kind of sensual pleasure.” ",
+  "mn80:14.9": "the senses, sensual pleasure, and the pleasure that surmounts the sensual.” ",
   "mn80:15.1": "When he said this, Vekhanasa became angry and upset. He even attacked and badmouthed the Buddha himself, saying, ",
   "mn80:15.2": "“The ascetic Gotama will be worsted!” He said to the Buddha, ",
   "mn80:15.3": "“This is exactly what happens with some ascetics and brahmins. Not knowing the past or seeing the future, they nevertheless claim: ",
