--- a/translation/en/sujato/sutta/mn/mn80_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn80_translation-en-sujato.json
@@ -67,7 +67,7 @@
   "mn80:14.2": "“It’s incredible, Master Gotama, it’s amazing! ",
   "mn80:14.3": "How well said this was by Master Gotama! ",
   "mn80:14.4": "‘From the senses comes sensual pleasure. Beyond sensual pleasure is the pleasure that surmounts the sensual, which is said to be the best of these.’ ",
-  "mn80:14.5": "Master Gotama, from the senses comes sensual pleasure. Beyond sensual pleasure is the pleasure that surmounts the sensual, which is said to be the best thing there.” ",
+  "mn80:14.5": "Master Gotama, from the senses comes sensual pleasure. Beyond sensual pleasure is the pleasure that surmounts the sensual, which is said to be the best of these.” ",
   "mn80:14.6": "“Kaccāna, since you have a different view, creed, and belief, then, unless you dedicate yourself to practice with the guidance of tradition, it’s hard for to understand ",
   "mn80:14.7": "the senses, sensual pleasure, and the pleasure that surmounts the sensual. ",
   "mn80:14.8": "There are mendicants who are perfected, who have ended the defilements, completed the spiritual journey, done what had to be done, laid down the burden, achieved their own goal, utterly ended the fetters of rebirth, and are rightly freed through enlightenment. They can understand ",
