--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-ss/pli-tv-bi-vb-ss3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-ss/pli-tv-bi-vb-ss3_translation-en-brahmali.json
@@ -46,7 +46,7 @@
   "pli-tv-bi-vb-ss3:2.20": "The Buddha rebuked them … ",
   "pli-tv-bi-vb-ss3:2.21": "“How could a nun do this? ",
   "pli-tv-bi-vb-ss3:2.22": "This will affect people’s confidence …” … ",
-  "pli-tv-bi-vb-ss3:2.23": "“And, monks, the nuns should recite this training rule like this: ",
+  "pli-tv-bi-vb-ss3:2.23": "“And so, monks, the nuns should recite this training rule like this: ",
   "pli-tv-bi-vb-ss3:2.24.0": "Second preliminary ruling ",
   "pli-tv-bi-vb-ss3:2.24.1": "‘If a nun walks to the next inhabited area by herself or crosses a river by herself, then that nun too has committed an immediate offense entailing sending away and suspension.’” ",
   "pli-tv-bi-vb-ss3:2.25": "In this way the Buddha laid down this training rule for the nuns. ",
