--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-ss/pli-tv-bi-vb-ss3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-ss/pli-tv-bi-vb-ss3_translation-en-brahmali.json
@@ -68,7 +68,7 @@
   "pli-tv-bi-vb-ss3:3.15": "The Buddha rebuked her … ",
   "pli-tv-bi-vb-ss3:3.16": "“How could a nun do this? ",
   "pli-tv-bi-vb-ss3:3.17": "This will affect people’s confidence …” … ",
-  "pli-tv-bi-vb-ss3:3.18": "“And, monks, the nuns should recite this training rule like this: ",
+  "pli-tv-bi-vb-ss3:3.18": "“And so, monks, the nuns should recite this training rule like this: ",
   "pli-tv-bi-vb-ss3:3.19.0": "Third preliminary ruling ",
   "pli-tv-bi-vb-ss3:3.19.1": "‘If a nun walks to the next inhabited area by herself or crosses a river by herself or spends the night apart by herself, then that nun too has committed an immediate offense entailing sending away and suspension.’” ",
   "pli-tv-bi-vb-ss3:3.20": "In this way the Buddha laid down this training rule for the nuns. ",
