--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-ss/pli-tv-bi-vb-ss3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-ss/pli-tv-bi-vb-ss3_translation-en-brahmali.json
@@ -85,7 +85,7 @@
   "pli-tv-bi-vb-ss3:4.10": "The Buddha rebuked her … ",
   "pli-tv-bi-vb-ss3:4.11": "“How could a nun do this? ",
   "pli-tv-bi-vb-ss3:4.12": "This will affect people’s confidence …” … ",
-  "pli-tv-bi-vb-ss3:4.13": "“And, monks, the nuns should recite this training rule like this: ",
+  "pli-tv-bi-vb-ss3:4.13": "“And so, monks, the nuns should recite this training rule like this: ",
   "pli-tv-bi-vb-ss3:4.14.0": "Final ruling ",
   "pli-tv-bi-vb-ss3:4.14.1": "‘If a nun walks to the next inhabited area by herself or crosses a river by herself or spends the night apart by herself or lags behind her companions by herself, then that nun too has committed an immediate offense entailing sending away and suspension.’” ",
   "pli-tv-bi-vb-ss3:5.1.0": "Definitions ",
