--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc15_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc15_translation-en-brahmali.json
@@ -11,7 +11,7 @@
   "pli-tv-bu-vb-pc15:1.4": "On one occasion they put out bedding in a dwelling belonging to the Sangha, but then departed without putting it away, having it put away, or informing anyone. ",
   "pli-tv-bu-vb-pc15:1.5": "The furniture was eaten by termites. ",
   "pli-tv-bu-vb-pc15:1.6": "The monks of few desires complained and criticized them, ",
-  "pli-tv-bu-vb-pc15:1.7": "“How could the monks from the group of seventeen put out bedding in a dwelling belonging to the Sangha, and then depart without putting it away, getting it put away, or informing anyone? The furniture was eaten by termites.” ",
+  "pli-tv-bu-vb-pc15:1.7": "“How could those monks from the group of seventeen put out bedding in a dwelling belonging to the Sangha, and then depart without putting it away, getting it put away, or informing anyone? The furniture was eaten by termites.” ",
   "pli-tv-bu-vb-pc15:1.8": "After rebuking those monks in many ways, they told the Buddha. Soon afterwards he had the Sangha gathered and questioned the monks: ",
   "pli-tv-bu-vb-pc15:1.9": "“Is it true, monks, that those monks did this?” ",
   "pli-tv-bu-vb-pc15:1.10": "“It’s true, Sir.” ",
