--- a/translation/en/sujato/sutta/mn/mn70_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn70_translation-en-sujato.json
@@ -145,7 +145,7 @@
   "mn70:19.7": "Then they might realize the supreme culmination of the spiritual path in this very life, and live having achieved with their own insight the goal for which gentlemen rightly go forth from the lay life to homelessness.’ ",
   "mn70:19.8": "Seeing this fruit of diligence for this mendicant, I say that they still have work to do with diligence. ",
   "mn70:20.1": "And what person is a follower of teachings? ",
-  "mn70:20.2": "It’s a person who doesn’t have direct meditative experience of the peaceful liberations that are formless, transcending form. And they have not, having seeing with wisdom, ended the defilements. And they accept the teachings proclaimed by the Realized One after considering them with a degree of wisdom. And they have the following qualities: ",
+  "mn70:20.2": "It’s a person who doesn’t have direct meditative experience of the peaceful liberations that are formless, transcending form. And they have not, having seen with wisdom, ended the defilements. And they accept the teachings proclaimed by the Realized One after considering them with a degree of wisdom. And they have the following qualities: ",
   "mn70:20.3": "the faculties of faith, energy, mindfulness, immersion, and wisdom. ",
   "mn70:20.4": "This person is called a follower of principles. ",
   "mn70:20.5": "I say that this mendicant also still has work to do with diligence. ",
