--- a/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
@@ -17,5 +17,6 @@
   "sn22.56:9.1": "E che cos'e' la percezione? ",
   "sn22.56:9.2": "Ci sono queste sei categorie di percezioni. ",
   "sn22.56:9.3": "percezione della materia, del suono, dell'olfatto/odore, del gusto, del tocco, del dhamma (attivita' mentale??) ",
-  "sn22.56:9.5": "Con il sorgere del contatto, c'e' il sorgere della percezione "
+  "sn22.56:9.5": "Con il sorgere del contatto, c'e' il sorgere della percezione ",
+  "sn22.56:9.6": "con la fine del contatto, c'e' la fine della percezione. "
 }
