--- a/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.56_translation-it-soma.json
@@ -20,5 +20,6 @@
   "sn22.56:9.5": "Con il sorgere del contatto, c'e' il sorgere della percezione ",
   "sn22.56:9.6": "con la fine del contatto, c'e' la fine della percezione. ",
   "sn22.56:10.1": "e che cosa sono le fabbricazioni? ",
-  "sn22.56:10.2": "Ci sono queste sei categorie di intenzioni "
+  "sn22.56:10.2": "Ci sono queste sei categorie di intenzioni ",
+  "sn22.56:10.3": "intenzione verso la materia, del suono, dell'olfatto/odore, del gusto, del tocco, del dhamma (attivita' mentale??) "
 }
