--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -2,5 +2,6 @@
   "mn6:0.1": "Discours de Longueur Moyenne 6 ",
   "mn6:0.2": "On pourrait souhaiter ",
   "mn6:1.1": "Ainsi ai-je entendu. ",
-  "mn6:1.2": "À une époque, le Bouddha résidait près de Sāvatthī dans la forêt de Jeta, au monastère d’Anāthapiṇḍika. "
+  "mn6:1.2": "À une époque, le Bouddha résidait près de Sāvatthī dans la forêt de Jeta, au monastère d’Anāthapiṇḍika. ",
+  "mn6:1.3": "Là, le Bouddha s’adressa aux monastiques, "
 }
