--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -6,5 +6,6 @@
   "mn6:1.3": "Là, le Bouddha s’adressa aux monastiques, ",
   "mn6:1.4": "« Monastiques ! » ",
   "mn6:1.5": "« Vénérable », répondirent-ils. ",
-  "mn6:1.6": "Le Bouddha déclara ceci : "
+  "mn6:1.6": "Le Bouddha déclara ceci : ",
+  "mn6:2.1": "« Monastiques, observez scrupuleusement les préceptes éthiques et le code monastique. Conduisez-vous avec modération en suivant ce code, adoptez une bonne conduite et sollicitez des aumônes en des lieux convenables. Conscients des risques liés à la moindre infraction, respectez les règles que vous avez adoptées. "
 }
