--- a/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn6_translation-fr-noeismet.json
@@ -8,5 +8,6 @@
   "mn6:1.5": "« Vénérable », répondirent-ils. ",
   "mn6:1.6": "Le Bouddha déclara ceci : ",
   "mn6:2.1": "« Monastiques, observez scrupuleusement les préceptes éthiques et le code monastique. Conduisez-vous avec modération en suivant ce code, adoptez une bonne conduite et sollicitez des aumônes en des lieux convenables. Conscients des risques liés à la moindre infraction, respectez les règles que vous avez adoptées. ",
-  "mn6:3.1": "Il se peut qu’un monastique désire : ‹ Puisse-je être aimé et approuvé, respecté et admiré, par mes compagnons spirituels. › Qu’il observe donc ses préceptes, soit engagé à maintenir la sérénité intérieure de l’esprit, ne néglige pas la méditation, fasse preuve de discernement, et opte pour la retraite dans des huttes vides. "
+  "mn6:3.1": "Il se peut qu’un monastique désire : ‹ Puisse-je être aimé et approuvé, respecté et admiré, par mes compagnons spirituels. › Qu’il observe donc ses préceptes, soit engagé à maintenir la sérénité intérieure de l’esprit, ne néglige pas la méditation, fasse preuve de discernement, et opte pour la retraite dans des huttes vides. ",
+  "mn6:4.1": "Il se peut qu’un monastique désire : ‹ Puisse-je recevoir des robes, de la nourriture d’aumône, des lieux de séjour, et des nécessités pour les maladies et autres besoins. › Qu’il observe donc ses préceptes, soit engagé à maintenir la sérénité intérieure de l’esprit, ne néglige pas la méditation, fasse preuve de discernement, et opte pour la retraite dans des huttes vides. "
 }
