--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc36_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc36_translation-en-brahmali.json
@@ -66,7 +66,7 @@
   "pli-tv-bu-vb-pc36:2.1.29": "Aiming to criticize him: ",
   "pli-tv-bu-vb-pc36:2.1.30": "if he offers it to him, thinking, “With this I’ll accuse him,” “I’ll remind him,” “I’ll counter-accuse him,” “I’ll counter-remind him,” “I’ll humiliate him,” he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc36:2.1.31": "If, because of what he says, the other monk receives it with the intention of eating it, then the donor commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pc36:2.1.32": "For every mouthful, the donor commits an offense of wrong conduct. ",
+  "pli-tv-bu-vb-pc36:2.1.32": "For every mouthful swallowed, the donor commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc36:2.1.33": "When the other monk has finished eating, the donor commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc36:2.2.0": "Permutations ",
   "pli-tv-bu-vb-pc36:2.2.1": "If the other monk has refused an invitation to eat more, and the donor perceives that he has, and he invites him to eat fresh or cooked food that is not left over, he commits an offense entailing confession. ",
