--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc29_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc29_translation-en-brahmali.json
@@ -65,7 +65,7 @@
   "pli-tv-bu-vb-pc29:3.1.15": "The householder had intended to prepare it: ",
   "pli-tv-bu-vb-pc29:3.1.16": "they are relatives or they have invited or they give regularly. ",
   "pli-tv-bu-vb-pc29:3.1.17": "If he receives it with the intention of eating it, except if the householder had intended to prepare it anyway, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pc29:3.1.18": "For every mouthful, he commits an offense entailing confession. ",
+  "pli-tv-bu-vb-pc29:3.1.18": "For every mouthful swallowed, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc29:3.2.0": "Permutations ",
   "pli-tv-bu-vb-pc29:3.2.1": "If a nun had it prepared, and he perceives it as such, and he eats it, except if the householder had intended to prepare it anyway, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc29:3.2.2": "If a nun had it prepared, but he is unsure of it, and he eats it, except if the householder had intended to prepare it anyway, he commits an offense of wrong conduct. ",
