--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc39_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc39_translation-en-brahmali.json
@@ -67,7 +67,7 @@
   "pli-tv-bu-vb-pc39:3.1.29": "who is not comfortable without fine foods. ",
   "pli-tv-bu-vb-pc39:3.1.30": "If he is not sick and he requests for himself, then for the effort there is an act of wrong conduct. ",
   "pli-tv-bu-vb-pc39:3.1.31": "When he receives it with the intention of eating it, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pc39:3.1.32": "For every mouthful, he commits an offense entailing confession. ",
+  "pli-tv-bu-vb-pc39:3.1.32": "For every mouthful swallowed, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc39:3.2.0": "Permutations ",
   "pli-tv-bu-vb-pc39:3.2.1": "If he is not sick, and he does not perceive himself as sick, and he eats fine foods that he has requested for himself, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc39:3.2.2": "If he is not sick, but he is unsure of it, and he eats fine foods that he has requested for himself, he commits an offense entailing confession. ",
