--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc32_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc32_translation-en-brahmali.json
@@ -131,7 +131,7 @@
   "pli-tv-bu-vb-pc32:9.1.17": "It is a meal given by a monastic: ",
   "pli-tv-bu-vb-pc32:9.1.18": "if any kind of wanderer is making the meal, he may eat in a group. ",
   "pli-tv-bu-vb-pc32:9.1.19": "If he receives something intending to eat it, except on an appropriate occasion, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pc32:9.1.20": "For every mouthful, he commits an offense entailing confession. ",
+  "pli-tv-bu-vb-pc32:9.1.20": "For every mouthful swallowed, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc32:9.2.0": "Permutations ",
   "pli-tv-bu-vb-pc32:9.2.1": "If he eats in a group, and he perceives it as such, except on an appropriate occasion, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc32:9.2.2": "If he eats in a group, but he is unsure of it, except on an appropriate occasion, he commits an offense entailing confession. ",
