--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-ss/pli-tv-bi-vb-ss6_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-ss/pli-tv-bi-vb-ss6_translation-en-brahmali.json
@@ -35,7 +35,7 @@
   "pli-tv-bi-vb-ss6:2.1.5": "Says: ",
   "pli-tv-bi-vb-ss6:2.1.6": "if she urges her on, saying, “Venerable, what can this man do to you, whether he has lust or not, if you’re without? Go on, Venerable, receive it with your own hands and then eat whatever fresh or cooked food he gives you,” then she commits an offense of wrong conduct. ",
   "pli-tv-bi-vb-ss6:2.1.7": "If, because of her statement, the other nun receives fresh or cooked food with the intention of eating it, she commits an offense of wrong conduct. ",
-  "pli-tv-bi-vb-ss6:2.1.8": "for every mouthful swallowed swallowed swallowed, she commits a serious offense. ",
+  "pli-tv-bi-vb-ss6:2.1.8": "For every mouthful swallowed, she commits a serious offense. ",
   "pli-tv-bi-vb-ss6:2.1.9": "At the end of the meal, she commits an offense entailing suspension. ",
   "pli-tv-bi-vb-ss6:2.1.10": "That too: ",
   "pli-tv-bi-vb-ss6:2.1.11": "this is said with reference to the preceding offenses. ",
