--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-ss/pli-tv-bi-vb-ss5_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-ss/pli-tv-bi-vb-ss5_translation-en-brahmali.json
@@ -53,7 +53,7 @@
   "pli-tv-bi-vb-ss5:2.2.6": "For every mouthful, she commits a serious offense. ",
   "pli-tv-bi-vb-ss5:2.2.7": "If she receives water or a tooth cleaner, she commits an offense of wrong conduct. ",
   "pli-tv-bi-vb-ss5:2.2.8": "If only the male being has lust, and she receives fresh or cooked food with the intention of eating it, she commits an offense of wrong conduct. ",
-  "pli-tv-bi-vb-ss5:2.2.9": "For every mouthful, she commits an offense of wrong conduct. ",
+  "pli-tv-bi-vb-ss5:2.2.9": "For every mouthful swallowed, she commits an offense of wrong conduct. ",
   "pli-tv-bi-vb-ss5:2.2.10": "If she receives water or a tooth cleaner, she commits an offense of wrong conduct. ",
   "pli-tv-bi-vb-ss5:2.3.0": "Non-offenses ",
   "pli-tv-bi-vb-ss5:2.3.1": "There is no offense: ",
