--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-ss/pli-tv-bi-vb-ss5_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-ss/pli-tv-bi-vb-ss5_translation-en-brahmali.json
@@ -35,7 +35,7 @@
   "pli-tv-bi-vb-ss5:2.1.13": "Cooked food: ",
   "pli-tv-bi-vb-ss5:2.1.14": "there are five kinds of cooked food: cooked grain, porridge, flour products, fish, and meat. ",
   "pli-tv-bi-vb-ss5:2.1.15": "If she receives fresh or cooked food with the intention of eating it, she commits a serious offense. ",
-  "pli-tv-bi-vb-ss5:2.1.16": "For every mouthful, she commits an offense entailing suspension. ",
+  "pli-tv-bi-vb-ss5:2.1.16": "For every mouthful swallowed, she commits an offense entailing suspension. ",
   "pli-tv-bi-vb-ss5:2.1.17": "That too: ",
   "pli-tv-bi-vb-ss5:2.1.18": "this is said with reference to the preceding offenses. ",
   "pli-tv-bi-vb-ss5:2.1.19": "An immediate offense: ",
