--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-pd/pli-tv-bi-vb-pd2-8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-pd/pli-tv-bi-vb-pd2-8_translation-en-brahmali.json
@@ -72,7 +72,7 @@
   "pli-tv-bi-vb-pd8:2.1.22": "curd from those same animals. ",
   "pli-tv-bi-vb-pd8:2.1.23": "If she is not sick and she asks for herself, then for the effort there is an act of wrong conduct. ",
   "pli-tv-bi-vb-pd8:2.1.24": "When she receives it with the intention of eating it, she commits an offense of wrong conduct. ",
-  "pli-tv-bi-vb-pd8:2.1.25": "For every mouthful, she commits an offense entailing acknowledgment. ",
+  "pli-tv-bi-vb-pd8:2.1.25": "For every mouthful swallowed, she commits an offense entailing acknowledgment. ",
   "pli-tv-bi-vb-pd8:2.2.0": "Permutations ",
   "pli-tv-bi-vb-pd8:2.2.1": "If she is not sick, and she does not perceive herself as sick, and she eats curd that she has asked for, she commits an offense entailing acknowledgment. ",
   "pli-tv-bi-vb-pd8:2.2.2": "If she is not sick, but she is unsure of it, and she eats curd that she has asked for, she commits an offense entailing acknowledgment. ",
