--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-pd/pli-tv-bi-vb-pd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-pd/pli-tv-bi-vb-pd1_translation-en-brahmali.json
@@ -49,7 +49,7 @@
   "pli-tv-bi-vb-pd1:2.1.10": "ghee from cows, ghee from goats, ghee from buffaloes, or ghee from whatever animal whose meat is allowable. ",
   "pli-tv-bi-vb-pd1:2.1.11": "If she is not sick and she asks for herself, then for the effort there is an act of wrong conduct. ",
   "pli-tv-bi-vb-pd1:2.1.12": "When she receives it with the intention of eating it, she commits an offense of wrong conduct. ",
-  "pli-tv-bi-vb-pd1:2.1.13": "For every mouthful, she commits an offense entailing acknowledgment. ",
+  "pli-tv-bi-vb-pd1:2.1.13": "For every mouthful swallowed, she commits an offense entailing acknowledgment. ",
   "pli-tv-bi-vb-pd1:2.2.0": "Permutations ",
   "pli-tv-bi-vb-pd1:2.2.1": "If she is not sick, and she does not perceive herself as sick, and she eats ghee that she has asked for, she commits an offense entailing acknowledgment. ",
   "pli-tv-bi-vb-pd1:2.2.2": "If she is not sick, but she is unsure of it, and she eats ghee that she has asked for, she commits an offense entailing acknowledgment. ",
