--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc35_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc35_translation-en-brahmali.json
@@ -85,7 +85,7 @@
   "pli-tv-bu-vb-pc35:3.2.2": "If it is not left over, but he is unsure of it, and he eats fresh or cooked food, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc35:3.2.3": "If it is not left over, but he perceives it as such, and he eats fresh or cooked food, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc35:3.2.4": "If he receives post-midday tonics, seven-day tonics, or lifetime tonics for the purpose of food, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pc35:3.2.5": "For every mouthful, he commits an offense of wrong conduct. ",
+  "pli-tv-bu-vb-pc35:3.2.5": "For every mouthful swallowed, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc35:3.2.6": "If it is left over, but he does not perceive it as such, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc35:3.2.7": "If it is left over, but he is unsure of it, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc35:3.2.8": "If it is left over, and he perceives it as such, there is no offense. ",
