--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc38_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc38_translation-en-brahmali.json
@@ -42,7 +42,7 @@
   "pli-tv-bu-vb-pc38:2.2.2": "If it has been stored, but he is unsure of it, and he eats the fresh or cooked food, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc38:2.2.3": "If it has been stored, but he does not perceive that it has, and he eats the fresh or cooked food, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc38:2.2.4": "If he receives post-midday tonics, seven-day tonics, or lifetime tonics for the purpose of food, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pc38:2.2.5": "For every mouthful, he commits an offense of wrong conduct. ",
+  "pli-tv-bu-vb-pc38:2.2.5": "For every mouthful swallowed, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc38:2.2.6": "If it has not been stored, but he perceives that it has, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc38:2.2.7": "If it has not been stored, but he is unsure of it, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc38:2.2.8": "If it has not been stored, and he does not perceive that it has, there is no offense. ",
