--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
@@ -108,7 +108,7 @@
   "pli-tv-pvr2.2:30.0.2": "4.1 The subchapter on garlic ",
   "pli-tv-pvr2.2:30.1": "When eating garlic, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:30.2": "when she receives it with the intention of eating it, she commits an offense of wrong conduct; ",
-  "pli-tv-pvr2.2:30.3": "for every mouthful, she commits an offense entailing confession. ",
+  "pli-tv-pvr2.2:30.3": "for every mouthful swallowed, she commits an offense entailing confession. ",
   "pli-tv-pvr2.2:31.1": "When removing hair from the private parts, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:31.2": "when she is in the process of removing it, then for the effort there is an offense of wrong conduct; ",
   "pli-tv-pvr2.2:31.3": "when she has removed it, she commits an offense entailing confession. ",
