--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.10_translation-en-brahmali.json
@@ -53,7 +53,7 @@
   "pli-tv-pvr2.10:9.4": "when she receives water or a tooth cleaner, she commits an offense of wrong conduct. ",
   "pli-tv-pvr2.10:10.1": "As a result of urging a nun on, saying, “Venerable, what can this man do to you, whether he has lust or not, if you’re without? Go on, Venerable, receive it with your own hands and then eat whatever fresh or cooked food he gives to you,” she commits three kinds of offenses: ",
   "pli-tv-pvr2.10:10.2": "when, because of her statement, the other nun receives it with the intention of eating it, she commits an offense of wrong conduct; ",
-  "pli-tv-pvr2.10:10.3": "for every mouthful, she commits a serious offense; ",
+  "pli-tv-pvr2.10:10.3": "for every mouthful swallowed, she commits a serious offense; ",
   "pli-tv-pvr2.10:10.4": "when the meal is finished, she commits an offense entailing suspension. ",
   "pli-tv-pvr2.10:11.1": "As a result of not stopping when pressed for the third time, an angry nun commits three kinds of offenses: ",
   "pli-tv-pvr2.10:11.2": "after the motion, she commits an offense of wrong conduct; ",
