--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.16_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.16_translation-en-brahmali.json
@@ -27,7 +27,7 @@
   "pli-tv-pvr2.16:3.1": "When it comes to the offenses that are a result of asking for curd and then eating it, how many kinds of offenses does she commit? ",
   "pli-tv-pvr2.16:3.2": "She commits two kinds of offenses: ",
   "pli-tv-pvr2.16:3.3": "when she receives it with the intention of eating it, she commits an offense of wrong conduct; ",
-  "pli-tv-pvr2.16:3.4": "for every mouthful, she commits an offense entailing acknowledgment. ",
+  "pli-tv-pvr2.16:3.4": "for every mouthful swallowed, she commits an offense entailing acknowledgment. ",
   "pli-tv-pvr2.16:4.1": "When it comes to these offenses, to how many of the four kinds of failure do they belong? ",
   "pli-tv-pvr2.16:4.2": "In how many of the seven classes of offenses are they found? ",
   "pli-tv-pvr2.16:4.3": "Through how many of the six kinds of originations of offenses do they originate? ",
