--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
@@ -420,7 +420,7 @@
   "pli-tv-pvr2.2:140.3": "for every mouthful, she commits an offense entailing acknowledgment. ",
   "pli-tv-pvr2.2:141.1": "When asking for milk and then drinking it, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:141.2": "when she receives it with the intention of drinking it, she commits an offense of wrong conduct; ",
-  "pli-tv-pvr2.2:141.3": "for every mouthful, she commits an offense entailing acknowledgment. ",
+  "pli-tv-pvr2.2:141.3": "for every mouthful swallowed, she commits an offense entailing acknowledgment. ",
   "pli-tv-pvr2.2:142.1": "When asking for curd and then eating it, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:142.2": "when she receives it with the intention of eating it, she commits an offense of wrong conduct; ",
   "pli-tv-pvr2.2:142.3": "for every mouthful swallowed, she commits an offense entailing acknowledgment. ",
