--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
@@ -414,7 +414,7 @@
   "pli-tv-pvr2.2:138.3": "for every mouthful, she commits an offense entailing acknowledgment. ",
   "pli-tv-pvr2.2:139.1": "When asking for fish and then eating it, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:139.2": "when she receives it with the intention of eating it, she commits an offense of wrong conduct; ",
-  "pli-tv-pvr2.2:139.3": "for every mouthful, she commits an offense entailing acknowledgment. ",
+  "pli-tv-pvr2.2:139.3": "for every mouthful swallowed, she commits an offense entailing acknowledgment. ",
   "pli-tv-pvr2.2:140.1": "When asking for meat and then eating it, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:140.2": "when she receives it with the intention of eating it, she commits an offense of wrong conduct; ",
   "pli-tv-pvr2.2:140.3": "for every mouthful swallowed, she commits an offense entailing acknowledgment. ",
