--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.2_translation-en-brahmali.json
@@ -402,7 +402,7 @@
   "pli-tv-pvr2.2:135.0": "5. The chapter on offenses entailing acknowledgment ",
   "pli-tv-pvr2.2:135.1": "When asking for ghee and then eating it, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:135.2": "when she receives it with the intention of eating it, she commits an offense of wrong conduct; ",
-  "pli-tv-pvr2.2:135.3": "for every mouthful, she commits an offense entailing acknowledgment. ",
+  "pli-tv-pvr2.2:135.3": "for every mouthful swallowed, she commits an offense entailing acknowledgment. ",
   "pli-tv-pvr2.2:136.1": "When asking for oil and then eating it, she commits two kinds of offenses: ",
   "pli-tv-pvr2.2:136.2": "when she receives it with the intention of eating it, she commits an offense of wrong conduct; ",
   "pli-tv-pvr2.2:136.3": "for every mouthful swallowed, she commits an offense entailing acknowledgment. ",
